test/visibility/import/public/no-param-import.good
no-param-import.chpl:4: error: import must name a module ('p' is not a module)
